add link to rules & procedures doc

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <section id="learn">
       <h3>Learn More</h3>
-      <p>We strive to practice our principles in every aspect of our work; more information about those principles and how we act on them can be found in <a href="/bylaws.pdf" target="_blank" title="Asheville DSA Bylaws">our bylaws</a>.</p>
+      <p>We strive to practice our principles in every aspect of our work; more information about those principles and how we act on them can be found in <a href="/bylaws.pdf" target="_blank" title="Asheville DSA Bylaws">our bylaws</a>. Additional rules and procedures we've agreed on are contained in <a href="https://docs.google.com/document/d/11Tnc1S2ONBhdvaVFO8oF1h1yjo5-8mrjW_KztREckuQ/edit" target="_blank" title="AVLDSA Rules and Procedures | Google Docs">this document</a>.</p>
       <div class="separator horizontal small"></div>
       <figure>
         <a href="http://www.dsausa.org/about_dsa" target="_blank"><h4>About DSA</h4></a>
