fix unclosed html tags in last commit

--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
         <h4>May General Meeting</h4>
         <p>Date TBD, Late May</p>
         <p>BeLoved Liberation Station <address>10 N. Market St., Asheville</address></p>
-        <p>We'll be holding our annual Steering Committee elections at this meeting. For more information on the election, or to nominate someone for office, <a href="mailto:general@avldsa.org">email us</a>!
+        <p>We'll be holding our annual Steering Committee elections at this meeting. For more information on the election, or to nominate someone for office, <a href="mailto:general@avldsa.org">email us</a>!</p>
+      </figure>
     </section>
 
 
