--- a/index.html
+++ b/index.html
@@ -85,17 +85,7 @@
           <a href="https://www.facebook.com/AVLDSA" target="_blank" aria-label="Asheville DSA Facebook Page"><i class="fa fa-inline fa-facebook"></i> Asheville DSA on Facebook</a>
         </li>
 
-        <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
-        <div id="mc_embed_signup">
-        <form action="https://avldsa.us15.list-manage.com/subscribe/post?u=9c0e316fcee9cf79a7d9b1d8f&amp;id=ce1668117d" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-          <div id="mc_embed_signup_scroll">
-          <label for="mce-EMAIL">Join our mailing list</label>
-          <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-          <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_9c0e316fcee9cf79a7d9b1d8f_4d16dd1398" tabindex="-1" value=""></div>
-          <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-          </div>
-        </form>
-        </div>
+        <link href='https://actionnetwork.org/css/style-embed-v3.css' rel='stylesheet' type='text/css' /><script src='https://actionnetwork.org/widgets/v3/form/join-the-asheville-dsa-email-list?format=js&source=widget'></script><div id='can-form-area-join-the-asheville-dsa-email-list' style='width: 300px'><!-- this div is the target for our HTML insertion --></div>
 
         <br />
 
