small style tweaks for actionnetwork signup form

--- a/index.html
+++ b/index.html
@@ -19,8 +19,15 @@
   <meta name="twitter:image:alt" content="A stylized illustration of three fists rising up from mountains in the foreground, with a red rose above the fists in the background.">
 
   <style type="text/css">
-    #mc_embed_signup{background:#fff; clear:left; width:100%;}
-    #mc_embed_signup .button#mc-embedded-subscribe{margin-top: .5em;}
+    div#can-form-area-join-the-asheville-dsa-email-list h2 {
+      text-align: center;
+    }
+    div#can-form-area-join-the-asheville-dsa-email-list h4 {
+      display: none;
+    }
+    div#can-form-area-join-the-asheville-dsa-email-list input[type='submit'] {
+      background-color: rgb(236, 31, 39);
+    }
   </style>
 
 </head>
@@ -85,7 +92,7 @@
           <a href="https://www.facebook.com/AVLDSA" target="_blank" aria-label="Asheville DSA Facebook Page"><i class="fa fa-inline fa-facebook"></i> Asheville DSA on Facebook</a>
         </li>
 
-        <link href='https://actionnetwork.org/css/style-embed-v3.css' rel='stylesheet' type='text/css' /><script src='https://actionnetwork.org/widgets/v3/form/join-the-asheville-dsa-email-list?format=js&source=widget'></script><div id='can-form-area-join-the-asheville-dsa-email-list' style='width: 300px'><!-- this div is the target for our HTML insertion --></div>
+        <link href='https://actionnetwork.org/css/style-embed-v3.css' rel='stylesheet' type='text/css' /><script src='https://actionnetwork.org/widgets/v3/form/join-the-asheville-dsa-email-list?format=js&source=widget'></script><div id='can-form-area-join-the-asheville-dsa-email-list'><!-- this div is the target for our HTML insertion --></div>
 
         <br />
 
