more style tweaks for new email signup form

--- a/index.html
+++ b/index.html
@@ -19,14 +19,22 @@
   <meta name="twitter:image:alt" content="A stylized illustration of three fists rising up from mountains in the foreground, with a red rose above the fists in the background.">
 
   <style type="text/css">
+    div#can-form-area-join-the-asheville-dsa-email-list * {
+      font-family: "Manifold DSA Regular", Sans-Serif !important; 
+    }
     div#can-form-area-join-the-asheville-dsa-email-list h2 {
-      text-align: center;
+      text-align: center !important;
+      font-family: "Manifold DSA Bold", Sans-Serif !important; 
     }
     div#can-form-area-join-the-asheville-dsa-email-list h4 {
       display: none;
     }
     div#can-form-area-join-the-asheville-dsa-email-list input[type='submit'] {
-      background-color: rgb(236, 31, 39);
+      background-color: rgb(236, 31, 39) !important;
+      font-family: "Manifold DSA Bold", Sans-Serif !important; 
+    }
+    div#action_info, div#logo_wrap {
+      display: none !important;
     }
   </style>
 
@@ -91,12 +99,13 @@
         <li>
           <a href="https://www.facebook.com/AVLDSA" target="_blank" aria-label="Asheville DSA Facebook Page"><i class="fa fa-inline fa-facebook"></i> Asheville DSA on Facebook</a>
         </li>
+      </ul>
+        <br />
 
         <link href='https://actionnetwork.org/css/style-embed-v3.css' rel='stylesheet' type='text/css' /><script src='https://actionnetwork.org/widgets/v3/form/join-the-asheville-dsa-email-list?format=js&source=widget'></script><div id='can-form-area-join-the-asheville-dsa-email-list'><!-- this div is the target for our HTML insertion --></div>
 
         <br />
 
-      </ul>
 
     </section>
   </div>
