add action banner

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
 </head>
 
 <body>
+  <div class="action-banner"> 
+    <span>Demand Mission Hospital stop funding anti-Medicare For All efforts — <a style='color:white;' href='https://go.avldsa.org/hca' target='_blank'>CLICK HERE</a></span>
+  </div>
   <header>
     <h1 style="margin-bottom: 0;">Asheville DSA</h1>
     <div class="img-container">
