tweaked language on home page re: public events

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
     <section id="join">
       <h3>Join Us</h3>
-      <p>DSA is a dues-paying membership organization, not a political party. All local events are open to the public and, whenever possible, child care will be available.</p>
+      <p>DSA is a dues-paying membership organization, not a political party. Many of our local events are open to the public and, whenever possible, child care will be available.</p>
       <div class="separator horizontal small"></div>
       <ul>
         <li>
