updated action banner

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <body>
   <div class="action-banner"> 
-    <span>Demand Mission Hospital stop funding anti-Medicare For All efforts — <a style='color:white;' href='https://go.avldsa.org/hca' target='_blank'>CLICK HERE</a></span>
+    <span>Join us for the Asheville March and Rally for Medicare for All! — <a style='color:white;' href='https://actionnetwork.org/events/medicare-for-all-asheville' target='_blank'>CLICK HERE</a></span>
   </div>
   <header>
     <h1 style="margin-bottom: 0;">Asheville DSA</h1>
