--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <body>
   <div class="action-banner"> 
-    <span>Demand Mission Hospital stop funding anti-Medicare For All efforts — <a style='color:white;' href='https://go.avldsa.org/hca' target='_blank'>CLICK HERE</a></span>
+    <span>JOIN US OCT. 2nd TO FIGHT FOR ABORTION JUSTICE!  — <a style='color:white;' href='https://actionnetwork.org/events/rally-against-abortion-bans-october-2' target='_blank'>CLICK HERE</a></span>
   </div>
   <header>
     <h1 style="margin-bottom: 0;">Asheville DSA</h1>
