Change absolute resource references to relative

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
   <title>Asheville DSA - Democratic Socialists of America</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link href="/reset.css" rel="stylesheet" type="text/css">
-  <link href="/style.css" rel="stylesheet" type="text/css">
+  <link href="calendar.css" rel="stylesheet" type="text/css">
+  <link href="reset.css" rel="stylesheet" type="text/css">
+  <link href="style.css" rel="stylesheet" type="text/css">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
   <meta property="og:url" content="https://www.avldsa.org">
@@ -49,7 +50,7 @@
   <header>
     <h1 style="margin-bottom: 0;">Asheville DSA</h1>
     <div class="img-container">
-      <img id="logo" src="/avl-dsa-logo-notext.png" title="Asheville DSA Logo" aria-label="A stylized illustration of three fists rising up from mountains in the foreground, with a red rose above the fists in the background." />
+      <img id="logo" src="avl-dsa-logo-notext.png" title="Asheville DSA Logo" aria-label="A stylized illustration of three fists rising up from mountains in the foreground, with a red rose above the fists in the background." />
     </div>
     <h2>Democratic Socialists of America</h2>
     <p>
@@ -63,7 +64,7 @@
 
     <section id="learn">
       <h3>Learn More</h3>
-      <p>We strive to practice our principles in every aspect of our work; more information about those principles and how we act on them can be found in <a href="/bylaws.pdf" target="_blank" title="Asheville DSA Bylaws">our bylaws</a>. Additional rules and procedures we've agreed on are contained in <a href="https://docs.google.com/document/d/11Tnc1S2ONBhdvaVFO8oF1h1yjo5-8mrjW_KztREckuQ/edit" target="_blank" title="AVLDSA Rules and Procedures | Google Docs">this document</a>.</p>
+      <p>We strive to practice our principles in every aspect of our work; more information about those principles and how we act on them can be found in <a href="bylaws.pdf" target="_blank" title="Asheville DSA Bylaws">our bylaws</a>. Additional rules and procedures we've agreed on are contained in <a href="https://docs.google.com/document/d/11Tnc1S2ONBhdvaVFO8oF1h1yjo5-8mrjW_KztREckuQ/edit" target="_blank" title="AVLDSA Rules and Procedures | Google Docs">this document</a>.</p>
       <div class="separator horizontal small"></div>
       <figure>
         <a href="http://www.dsausa.org/about_dsa" target="_blank"><h4>About DSA</h4></a>
