refactor: move static assets into directories

--- a/calendar.html
+++ b/calendar.html
@@ -5,18 +5,18 @@
   <title>Asheville DSA Calendar - Democratic Socialists of America</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link href="calendar.css" rel="stylesheet" type="text/css">
-  <link href="reset.css" rel="stylesheet" type="text/css">
-  <link href="style.css" rel="stylesheet" type="text/css">
+  <link href="css/calendar.css" rel="stylesheet" type="text/css">
+  <link href="css/reset.css" rel="stylesheet" type="text/css">
+  <link href="css/style.css" rel="stylesheet" type="text/css">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
   <meta property="og:url" content="https://www.avldsa.org">
-  <meta property="og:image" content="https://www.avldsa.org/avl-dsa-logo-share.png">
+  <meta property="og:image" content="https://www.avldsa.org/images/avl-dsa-logo-share.png">
   <meta property="og:title" content="Asheville Democratic Socialists: Calendar">
   <meta property="og:description" content="Check out our upcoming events">
 
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:image" content="https://www.avldsa.org/avl-dsa-logo-share.png">
+  <meta name="twitter:image" content="https://www.avldsa.org/images/avl-dsa-logo-share.png">
   <meta name="twitter:site" content="@AshevilleDSA">
   <meta name="twitter:image:alt" content="A stylized illustration of three fists rising up from mountains in the foreground, with a red rose above the fists in the background.">
 
@@ -46,7 +46,7 @@
     <a href="./">
     <h1 style="margin-bottom: 0;">Asheville DSA</h1>
     <div class="img-container">
-      <img id="logo" src="avl-dsa-logo-notext.png" title="Asheville DSA Logo" aria-label="A stylized illustration of three fists rising up from mountains in the foreground, with a red rose above the fists in the background." />
+      <img id="logo" src="images/avl-dsa-logo-notext.png" title="Asheville DSA Logo" aria-label="A stylized illustration of three fists rising up from mountains in the foreground, with a red rose above the fists in the background." />
     </div>
     <h2>Democratic Socialists of America</h2>
     </a>
