--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
   <title>Asheville DSA - Democratic Socialists of America</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link href="reset.css" rel="stylesheet" type="text/css">
-  <link href="style.css" rel="stylesheet" type="text/css">
+  <link href="css/reset.css" rel="stylesheet" type="text/css">
+  <link href="css/style.css" rel="stylesheet" type="text/css">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
   <meta property="og:url" content="https://www.avldsa.org">
-  <meta property="og:image" content="https://www.avldsa.org/avl-dsa-logo-share.png">
+  <meta property="og:image" content="https://www.avldsa.org/images/avl-dsa-logo-share.png">
   <meta property="og:title" content="Asheville Democratic Socialists">
   <meta property="og:description" content="Join us in working for a more equitable society in our community, our state, and our country.">
 
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:image" content="https://www.avldsa.org/avl-dsa-logo-share.png">
+  <meta name="twitter:image" content="https://www.avldsa.org/images/avl-dsa-logo-share.png">
   <meta name="twitter:site" content="@AshevilleDSA">
   <meta name="twitter:image:alt" content="A stylized illustration of three fists rising up from mountains in the foreground, with a red rose above the fists in the background.">
 
@@ -50,7 +50,7 @@
     <a href="./">
     <h1 style="margin-bottom: 0;">Asheville DSA</h1>
     <div class="img-container">
-      <img id="logo" src="avl-dsa-logo-notext.png" title="Asheville DSA Logo" aria-label="A stylized illustration of three fists rising up from mountains in the foreground, with a red rose above the fists in the background." />
+      <img id="logo" src="images/avl-dsa-logo-notext.png" title="Asheville DSA Logo" aria-label="A stylized illustration of three fists rising up from mountains in the foreground, with a red rose above the fists in the background." />
     </div>
     <h2>Democratic Socialists of America</h2>
     </a>
@@ -65,7 +65,7 @@
 
     <section id="learn">
       <h3>Learn More</h3>
-      <p>We strive to practice our principles in every aspect of our work; more information about those principles and how we act on them can be found in <a href="bylaws.pdf" target="_blank" title="Asheville DSA Bylaws">our bylaws</a>. Additional rules and procedures we've agreed on are contained in <a href="https://docs.google.com/document/d/11Tnc1S2ONBhdvaVFO8oF1h1yjo5-8mrjW_KztREckuQ/edit" target="_blank" title="AVLDSA Rules and Procedures | Google Docs">this document</a>.</p>
+      <p>We strive to practice our principles in every aspect of our work; more information about those principles and how we act on them can be found in <a href="assets/bylaws.pdf" target="_blank" title="Asheville DSA Bylaws">our bylaws</a>. Additional rules and procedures we've agreed on are contained in <a href="https://docs.google.com/document/d/11Tnc1S2ONBhdvaVFO8oF1h1yjo5-8mrjW_KztREckuQ/edit" target="_blank" title="AVLDSA Rules and Procedures | Google Docs">this document</a>.</p>
       <div class="separator horizontal small"></div>
       <figure>
         <a href="http://www.dsausa.org/about_dsa" target="_blank"><h4>About DSA</h4></a>
