--- a/calendar.html
+++ b/calendar.html
@@ -56,7 +56,7 @@
   <div class="container">
     <section id="calendar">
         <h3>Calendar</h3>
-    <<iframe src="https://calendar.google.com/calendar/embed?src=790c58434b58f35c8ca77a4f311e4f77e3395e71f5714802a19a2af6b06da214%40group.calendar.google.com&showPrint=0&showCalendars=0&showTabs=0&showTitle=0&mode=AGENDA&showDate=0&showNav=0&ctz=America%2FNew_York" class="mobile-calendar-container" style="width: 80vw; height: 50vh;" frameborder="0" scrolling="no"></iframe>
+    <iframe src="https://calendar.google.com/calendar/embed?src=790c58434b58f35c8ca77a4f311e4f77e3395e71f5714802a19a2af6b06da214%40group.calendar.google.com&showPrint=0&showCalendars=0&showTabs=0&showTitle=0&mode=AGENDA&showDate=0&showNav=0&ctz=America%2FNew_York" class="mobile-calendar-container" style="width: 80vw; height: 50vh;" frameborder="0" scrolling="no"></iframe>
     <iframe src="https://calendar.google.com/calendar/embed?src=YjEyODlhZmUzYTc3YTU0ODA5OTJlOTQzMGQ0MzA4ZDU1YmE3MDQwMmJiNjYyOWI1ZDY4MzEzZDk3YTAzYWI2M0Bncm91cC5jYWxlbmRhci5nb29nbGUuY29t&showPrint=0&showCalendars=0&showTabs=0&showTitle=0&ctz=America%2FNew_York" class="desktop-calendar-container" style="width: 80vw; height: 60vw;" frameborder="0" scrolling="no"></iframe>
     </section>
   </div>
