SEO-friendly favicon link

--- a/calendar.html
+++ b/calendar.html
@@ -5,12 +5,13 @@
   <title>Asheville DSA Calendar - Democratic Socialists of America</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
   <link href="css/calendar.css" rel="stylesheet" type="text/css">
   <link href="css/reset.css" rel="stylesheet" type="text/css">
   <link href="css/style.css" rel="stylesheet" type="text/css">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
-  <meta property="og:url" content="https://www.avldsa.org">
+  <meta property="og:url" content="https://www.avldsa.org/calendar">
   <meta property="og:image" content="https://www.avldsa.org/images/avl-dsa-logo-share.png">
   <meta property="og:title" content="Asheville Democratic Socialists: Calendar">
   <meta property="og:description" content="Check out our upcoming events">
